--- a/Client/templates/home.html
+++ b/Client/templates/home.html
@@ -114,14 +114,15 @@
 
 <body>
 
+    <!-- Control header -->
   <div class="container">
     <div class="d-flex justify-content-end">
       <div class="row">
         <div class="col">
-          <p>Hagon</p>
+          <p>{{ user }}</p>
         </div>
         <div class="col">
-          <a href="#" class="text-danger">Signout</a>
+          <a href="{{ url_for('logout') }}" class="text-danger">Signout</a>
         </div>
       </div>
     </div>
@@ -133,47 +134,50 @@
             <h1>Supreme Strange</h1>
             <p>Things just got out of hand</p>
           </div>
-          <div class="col col-lg-auto">
-            <button class="btn btn-outline-primary justify-content-end align-items-center">
-              Download All
-            </button>
-            <a href="{{ url_for('upload') }}" class="btn btn-outline-primary justify-content-end align-items-center">
-              Upload Image
-            </a>
-          </div>
+          <form action="{{ url_for('download_all') }}" method="post" class="col col-lg-auto">
+            <div class="col col-lg-auto">
+              <button class="btn btn-outline-primary justify-content-end align-items-center" type="submit">
+                Download All
+              </button>
+              <a href="{{ url_for('upload') }}" class="btn btn-outline-primary justify-content-end align-items-center">
+                Upload Image
+              </a>
+            </div>
+          </form>
         </div>
       </div>
     </div>
 
-    <!-- <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
+      <!-- Share modal -->
+    <div class="modal" id="myModal">
+      <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">New message</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="form-group">
-                <label for="recipient-name" class="col-form-label">Recipient:</label>
-                <input type="text" class="form-control" id="recipient-name">
-              </div>
-              <div class="form-group">
-                <label for="message-text" class="col-form-label">Message:</label>
-                <textarea class="form-control" id="message-text"></textarea>
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Send message</button>
-          </div>
+    
+          <form action="{{ url_for('share') }}" method="post">
+            <div class="modal-header">
+              <h4 class="modal-title">Share this image</h4>
+              <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+      
+            <div class="modal-body">
+                <div class="mb-0">
+                  <label for="user-id" class="col-form-label">User ID:</label>
+                  <input type="text" class="form-control" id="user-id"/>
+
+                  <label for="user-file" class="col-form-label user-file">File:</label>
+                </div>
+            </div>
+      
+            <div class="modal-footer">
+              <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Share</button>
+            </div>
+          </form>
+    
         </div>
       </div>
-    </div> -->
+    </div>
 
+    <!-- Main content -->
     <div id="main-content" class="file_manager">
       <div class="container">
         <div class="row clearfix">
@@ -183,7 +187,7 @@
                     <div class="file">
                       <a href="#">
                         <div class="hover">
-                          <button type="button" class="btn btn-icon btn-outline-dark">
+                          <button type="button" class="btn btn-icon btn-outline-dark" data-bs-toggle="modal" data-bs-target="#myModal" data-bs-whatever="{{ file[0] }}">
                             <i class="fas fa-share-alt"></i>
                           </button>
                           <button type="button" class="btn btn-icon btn-primary">
@@ -213,23 +217,45 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
 
+  <script>
+    $('#myModal').on('show.bs.modal', (event) => {
+      var button = $(event.relatedTarget)
+      var filename = button.data('bs-whatever')
+      var modal = $(this)
+      modal.find('.modal-body label .user-file').html(filename)
+    })
+  </script>
+
   <!--
     <button type="button" class="btn btn-icon btn-danger">
       <i class="fas fa-trash-alt"></i>
     </button>
-  -->
 
-  <script>
-    $('#exampleModal').on('show.bs.modal', function (event) {
-      var button = $(event.relatedTarget) // Button that triggered the modal
-      var recipient = button.data('whatever') // Extract info from data-* attributes
-      // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
-      // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
-      var modal = $(this)
-      modal.find('.modal-title').text('New message to ' + recipient)
-      modal.find('.modal-body input').val(recipient)
-    })
-  </script>
+    <div class="col-lg-3 col-md-4 col-sm-12">
+              <div class="card">
+                <div class="file">
+                  <a href="#">
+                    <div class="hover">
+                      <button type="button" class="btn btn-icon btn-outline-dark" data-bs-toggle="modal" data-bs-target="#myModal">
+                        <i class="fas fa-share-alt"></i>
+                      </button>
+                      <button type="button" class="btn btn-icon btn-primary">
+                        <i class="fas fa-arrow-down"></i>
+                      </button>
+                      </button>
+                    </div>
+                    <div class="icon">
+                      <i class="far fa-image "></i>
+                    </div>
+                    <div class="file-name">
+                      <p class="m-b-5 text-muted">Document_2017.doc</p>
+                      <small>Size: 42KB</small>
+                    </div>
+                  </a>
+                </div>
+              </div>
+            </div>
+  -->
 
 </body>
 
