--- a/Client/templates/home.html
+++ b/Client/templates/home.html
@@ -148,11 +148,42 @@
       </div>
     </div>
 
+    <!-- Modal share --> 
+      <div class="modal" id="myModal">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+      
+            <form action="{{ url_for('share') }}" method="post" name="share_form">
+              <div class="modal-header">
+                <h4 class="modal-title">Share this image</h4>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+              </div>
+        
+              <div class="modal-body">
+                  <div class="mb-0">
+                    <label for="user-id" class="col-form-label">User ID:</label>
+                    <input type="text" class="form-control" id="user-id" name="user-id"/>
+  
+                    <label for="user-file" class="col-form-label">Image File:</label>
+                    <input type="text" class="form-control" name="user-file" id="user-file">
+                  </div>
+              </div>
+        
+              <div class="modal-footer">
+                <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Share</button>
+              </div>
+            </form>
+      
+          </div>
+        </div>
+      </div>
+
     <!-- Main content -->
     <div id="main-content" class="file_manager">
       <div class="container">
         <div class="row clearfix">
             {% for file in files %}
+            <!-- Show Image (or something like that) -->
                 <div class="col-lg-3 col-md-4 col-sm-12">
                   <div class="card">
                     <div class="file">
@@ -176,35 +207,6 @@
                     </div>
                   </div>
                 </div>
-
-                <div class="modal" id="myModal">
-                  <div class="modal-dialog modal-dialog-centered">
-                    <div class="modal-content">
-                
-                      <form action="{{ url_for('share') }}" method="post">
-                        <div class="modal-header">
-                          <h4 class="modal-title">Share this image</h4>
-                          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                        </div>
-                  
-                        <div class="modal-body">
-                            <div class="mb-0">
-                              <label for="user-id" class="col-form-label">User ID:</label>
-                              <input type="text" class="form-control" id="user-id"/>
-            
-                              <label for="user-file" class="col-form-label">File:</label>
-                              <input type="text" class="form-control" name="user-file" id="user-file" value="{{ file[0] }}" readonly>
-                            </div>
-                        </div>
-                  
-                        <div class="modal-footer">
-                          <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Share</button>
-                        </div>
-                      </form>
-                
-                    </div>
-                  </div>
-                </div>
             {% endfor %}
         </div>
       </div>
@@ -215,38 +217,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/js/fontawesome.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
-
-  <!--
-    <button type="button" class="btn btn-icon btn-danger">
-      <i class="fas fa-trash-alt"></i>
-    </button>
-
-    <div class="col-lg-3 col-md-4 col-sm-12">
-              <div class="card">
-                <div class="file">
-                  <a href="#">
-                    <div class="hover">
-                      <button type="button" class="btn btn-icon btn-outline-dark" data-bs-toggle="modal" data-bs-target="#myModal">
-                        <i class="fas fa-share-alt"></i>
-                      </button>
-                      <button type="button" class="btn btn-icon btn-primary">
-                        <i class="fas fa-arrow-down"></i>
-                      </button>
-                      </button>
-                    </div>
-                    <div class="icon">
-                      <i class="far fa-image "></i>
-                    </div>
-                    <div class="file-name">
-                      <p class="m-b-5 text-muted">Document_2017.doc</p>
-                      <small>Size: 42KB</small>
-                    </div>
-                  </a>
-                </div>
-              </div>
-            </div>
-  -->
 
 </body>
 
