--- a/Client/templates/signup.html
+++ b/Client/templates/signup.html
@@ -20,7 +20,12 @@
           {% block content %}
           <div class="container">
             {% for message in get_flashed_messages() %}
-            <div class="alert alert-danger"> {{ message }} </div>
+            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+              {{ message }}
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
             {% endfor %}
 
             {% block page_content %}{% endblock %}
