--- a/Client/templates/upload.html
+++ b/Client/templates/upload.html
@@ -14,18 +14,20 @@
     <section class="vh-100">
         <div class="container col-md-7">
             {% block content %}
-                <div class="container">
-                    {% for message in get_flashed_messages() %}
-                    <div class="alert alert-danger alert-dismissible fade show" role="alert"> 
-                        {{ message }} 
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
+                    <div class="container">
+                        {% for message in get_flashed_messages() %}
+                        <div class="toast-container position-absolute top-0 end-0 p-3">
+                            <div class="toast align-items-center text-white bg-danger border-0 show" role="alert" aria-live="assertive" aria-atomic="true">
+                                <div class="d-flex">
+                                    <div class="toast-body">
+                                    {{ message }}
+                                    </div>
+                                    <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+                                </div>
+                            </div>  
+                        </div>
+                        {% endfor %}
                     </div>
-                    {% endfor %}
-
-                    {% block page_content %}{% endblock %}
-                </div>
             {% endblock %}
 
             <div class="mt-4 p-5 text-dark rounded">
